# gridbot

./: .env.example  Makefile  README.md  config.yaml  pyproject.toml
docs/: BACKLOG.md.txt  README.md  README.md.txt  agent-roles-workflow.md  functional-spec.md.txt  runbook.md  state-schema.md.txt  test-plan.md
docs/adrs/: 0000-adr-template.md  0001-exchange-choice.md
src/: main.py
src/bot/: decision.py  loop.py  persistence.py  state.py
src/core/: config.py  math.py
src/exchange/: base.py  binance.py  mock.py
src/gridbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_binance.py  test_config.py  test_decision.py  test_exchange.py  test_loop.py  test_math.py  test_persistence.py  test_placeholder.py
